fix: horizontal scroll

--- a/src/koduq/sections/home/About.module.scss
+++ b/src/koduq/sections/home/About.module.scss
@@ -88,7 +88,6 @@
   align-items: center;
   gap: 2rem;
   flex-direction: column;
-  overflow: hidden;
   background-color: colors.$green;
   width: 100%;
   height: 100%;
@@ -104,7 +103,6 @@
     height: 100vh;
     padding: 0 spacing.$pd__dk--small;
     margin-bottom: spacing.$pd__dk--small;
-
   }
 
   &__elm {
