--- a/src/koduq/sections/home/Header.module.scss
+++ b/src/koduq/sections/home/Header.module.scss
@@ -44,9 +44,3 @@
     display: none;
   }
 }
-
-.img-hero {
-  width: 100%;
-  height: 100vh;
-  background-color: rgb(52, 50, 59);
-}
