--- a/src/koduq/sections/home/HorizontalSection.module.scss
+++ b/src/koduq/sections/home/HorizontalSection.module.scss
@@ -1,3 +1,5 @@
+@use '../../../design-system/settings/colors';
+
 .horizontal-container {
   position: relative;
 }
@@ -10,9 +12,38 @@
 
 .panel {
   flex-shrink:0;
-  color:#000000;
   margin:0;	
   width: 100vw;
-  height: 90vh;
-  border: 1px solid white;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.panel-one {
+  background-color: colors.$cream;
+}
+
+.panel-two {
+  background-color: colors.$cream;
+  padding: 5rem;
+  justify-content: flex-end;
+
+  h1 {
+    font-size: 12rem;
+    line-height: 10rem;
+
+  }
+
+}
+
+.panel-three {
+  background-color: colors.$brown;
+  img {
+    width: 90vw;
+    height: 90vh;
+    border-radius: 3rem;
+  }
+
 }
